--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:coverage": "react-scripts test --watchAll=false --coverage"
   },
   "dependencies": {
+    "@sentry/nextjs": "^8.13.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
