chore: 라이브러리 4개 추가 (전부 마크다운 관련)
    "react-markdown": "^9.0.1",
    "react-syntax-highlighter": "^15.5.0",
    "@types/react-syntax-highlighter": "^15.5.13",
    "remark-gfm": "^4.0.0"

--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   },
   "dependencies": {
     "@sentry/nextjs": "^8.13.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.5.0",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.0",
