--- a/package.json
+++ b/package.json
@@ -15,23 +15,17 @@
   "dependencies": {
     "@prisma/client": "^5.16.1",
     "@sentry/nextjs": "^8.13.0",
-
-    "axios": "^1.7.2",
-
     "@tailwindcss/forms": "^0.5.7",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "iron-session": "^8.0.2",
-
     "next": "14.2.4",
     "prisma": "^5.16.1",
     "react": "^18",
     "react-dom": "^18",
-
-    "react-modal": "^3.16.1"
     "react-syntax-highlighter": "^15.5.0",
     "zod": "^3.23.8"
-
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.0",
@@ -54,6 +48,7 @@
     "eslint-plugin-storybook": "^0.8.0",
     "postcss": "^8",
     "react-markdown": "^9.0.1",
+    "react-modal": "^3.16.1",
     "remark-gfm": "^4.0.0",
     "storybook": "^8.1.11",
     "tailwindcss": "^3.4.1",
