--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:coverage": "react-scripts test --watchAll=false --coverage"
   },
   "dependencies": {
-    "@prisma/client": "^5.16.1",
+    "@hookform/resolvers": "^3.9.0",
     "@sentry/nextjs": "^8.13.0",
     "@tailwindcss/forms": "^0.5.7",
     "@types/react-syntax-highlighter": "^15.5.13",
@@ -24,11 +24,13 @@
     "prisma": "^5.16.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
     "react-syntax-highlighter": "^15.5.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.0",
+    "@prisma/client": "^5.16.2",
     "@sentry/nextjs": "^8.17.0",
     "@storybook/addon-essentials": "^8.1.11",
     "@storybook/addon-interactions": "^8.1.11",
