--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:coverage": "react-scripts test --watchAll=false --coverage"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "@prisma/client": "^5.16.1",
     "@sentry/nextjs": "^8.13.0",
     "@tailwindcss/forms": "^0.5.7",
