--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "test:coverage": "react-scripts test --watchAll=false --coverage"
   },
   "dependencies": {
+    "@prisma/client": "^5.17.0",
     "@sentry/nextjs": "^8.13.0",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "axios": "^1.7.2",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
@@ -39,6 +41,7 @@
     "eslint-config-next": "14.2.4",
     "eslint-plugin-storybook": "^0.8.0",
     "postcss": "^8",
+    "prisma": "^5.17.0",
     "storybook": "^8.1.11",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
