--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "iron-session": "^8.0.2",
+    "jotai": "^2.9.0",
     "next": "14.2.4",
     "prisma": "^5.16.1",
     "react": "^18",
@@ -48,6 +50,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "eslint-plugin-storybook": "^0.8.0",
+    "msw": "^2.3.1",
     "postcss": "^8",
     "react-markdown": "^9.0.1",
     "react-modal": "^3.16.1",
@@ -55,5 +58,10 @@
     "storybook": "^8.1.11",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
