--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "cheerio": "^1.0.0-rc.12",
     "iron-session": "^8.0.2",
+    "moment": "^2.30.1",
     "next": "14.2.4",
+    "node-fetch": "^3.3.2",
     "prisma": "^5.16.1",
     "react": "^18",
     "react-dom": "^18",
