--- a/package.json
+++ b/package.json
@@ -13,12 +13,10 @@
     "test:coverage": "react-scripts test --watchAll=false --coverage"
   },
   "dependencies": {
-
     "@heroicons/react": "^2.1.5",
-    "@prisma/client": "^5.16.1",
-
     "@hookform/resolvers": "^3.9.0",
-
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.16.1",
     "@sentry/nextjs": "^8.13.0",
     "@tailwindcss/forms": "^0.5.7",
     "@types/react-syntax-highlighter": "^15.5.13",
@@ -32,6 +30,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-portal": "^4.2.2",
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^4.0.0",
     "zod": "^3.23.8"
