--- a/package.json
+++ b/package.json
@@ -13,12 +13,9 @@
     "test:coverage": "react-scripts test --watchAll=false --coverage"
   },
   "dependencies": {
-
     "@heroicons/react": "^2.1.5",
-    "@prisma/client": "^5.16.1",
-
     "@hookform/resolvers": "^3.9.0",
-
+    "@prisma/client": "^5.16.1",
     "@sentry/nextjs": "^8.13.0",
     "@tailwindcss/forms": "^0.5.7",
     "@types/react-syntax-highlighter": "^15.5.13",
@@ -54,6 +51,7 @@
     "@types/react-dom": "^18",
     "@types/react-modal": "^3.16.3",
     "eslint": "^8",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "14.2.4",
     "eslint-plugin-storybook": "^0.8.0",
     "msw": "^2.3.1",
