--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/react-modal": "^3.16.3",
     "eslint": "^8",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-next": "14.2.4",
     "eslint-plugin-storybook": "^0.8.0",
     "msw": "^2.3.1",
