--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
     "react-hook-form": "^7.52.1",
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^4.0.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "react-markdown": "^9.0.1",
+    "@storybook/test": "^8.1.11",
+    "react-modal": "^3.16.1",
+    "@types/react-modal": "^3.16.3"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.0",
@@ -44,12 +48,10 @@
     "@storybook/blocks": "^8.1.11",
     "@storybook/nextjs": "^8.1.11",
     "@storybook/react": "^8.1.11",
-    "@storybook/test": "^8.1.11",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/react-modal": "^3.16.3",
     "eslint": "^8",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
@@ -59,8 +61,6 @@
     "eslint-plugin-storybook": "^0.8.0",
     "msw": "^2.3.1",
     "postcss": "^8",
-    "react-markdown": "^9.0.1",
-    "react-modal": "^3.16.1",
     "remark-gfm": "^4.0.0",
     "storybook": "^8.1.11",
     "tailwindcss": "^3.4.1",
