--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.16.1",
     "@sentry/nextjs": "^8.13.0",
+    "@storybook/test": "^8.1.11",
     "@tailwindcss/forms": "^0.5.7",
+    "@types/react-modal": "^3.16.3",
     "@types/react-syntax-highlighter": "^15.5.13",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
@@ -29,13 +31,11 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-markdown": "^9.0.1",
+    "react-modal": "^3.16.1",
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^4.0.0",
-    "zod": "^3.23.8",
-    "react-markdown": "^9.0.1",
-    "@storybook/test": "^8.1.11",
-    "react-modal": "^3.16.1",
-    "@types/react-modal": "^3.16.3"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.0",
@@ -52,6 +52,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^7.17.0",
+    "@typescript-eslint/parser": "^7.17.0",
     "eslint": "^8",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
@@ -59,6 +61,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-storybook": "^0.8.0",
+    "eslint-plugin-tailwindcss": "^3.17.4",
     "msw": "^2.3.1",
     "postcss": "^8",
     "remark-gfm": "^4.0.0",
