--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,57 +1,52 @@
 {
-    "root": true,
-    "parser": "@typescript-eslint/parser",
-    "plugins": ["@typescript-eslint", "prettier", "import", "tailwindcss"],
-    "parserOptions": {
-        "project": "./tsconfig.json",
-        "createDefaultProgram": true
+  "root": true,
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint", "prettier", "import", "tailwindcss"],
+  "parserOptions": {
+    "project": "./tsconfig.json",
+    "createDefaultProgram": true
+  },
+  "env": {
+    "browser": true,
+    "node": true,
+    "es6": true
+  },
+  "ignorePatterns": ["node_modules/", "next.config.mjs"],
+  "extends": [
+    "next/core-web-vitals",
+    "plugin:@typescript-eslint/recommended-type-checked",
+    "plugin:prettier/recommended",
+    "plugin:import/recommended",
+    "plugin:import/typescript",
+    "plugin:react/recommended",
+    "plugin:react-hooks/recommended",
+    "plugin:tailwindcss/recommended",
+    "plugin:storybook/recommended"
+  ],
+  "settings": {
+    "import/resolver": {
+      "typescript": {}
     },
-    "env": {
-        "browser": true,
-        "node": true,
-        "es6": true
-    },
-    "ignorePatterns": ["node_modules/", "next.config.mjs"],
-    "extends": [
-        "next/core-web-vitals",
-        "plugin:@typescript-eslint/recommended-type-checked",
-        "plugin:prettier/recommended",
-        "plugin:import/recommended",
-        "plugin:import/typescript",
-        "plugin:react/recommended",
-        "plugin:react-hooks/recommended",
-        "plugin:tailwindcss/recommended",
-        "plugin:storybook/recommended"
+    "import/parsers": { "@typescript-eslint/parser": [".ts", ".tsx"] }
+  },
+  "rules": {
+    "@typescript-eslint/no-explicit-any": "off",
+    "react/react-in-jsx-scope": "off",
+    "react/jsx-filename-extension": ["warn", { "extensions": [".ts", ".tsx"] }],
+    "react/function-component-definition": [
+      2,
+      { "namedComponents": ["arrow-function", "function-declaration"] }
     ],
-    "settings": {
-        "import/resolver": {
-            "typescript": {}
-        },
-        "import/parsers": { "@typescript-eslint/parser": [".ts", ".tsx"] }
-    },
-    "rules": {
-        "@typescript-eslint/no-explicit-any": "off",
-        "react/react-in-jsx-scope": "off",
-        "react/jsx-filename-extension": ["warn", { "extensions": [".ts", ".tsx"] }],
-        "react/function-component-definition": [
-            2,
-            { "namedComponents": ["arrow-function", "function-declaration"] }
-        ],
-        "import/order": [
-            "error",
-            {
-                "groups": [
-                    ["builtin", "external"],
-                    "internal",
-                    ["parent", "sibling", "index"],
-                    "object"
-                ],
-                "newlines-between": "always",
-                "alphabetize": {
-                    "order": "asc",
-                    "caseInsensitive": true
-                }
-            }
-        ]
-    }
+    "import/order": [
+      "error",
+      {
+        "groups": [["builtin", "external"], "internal", ["parent", "sibling", "index"], "object"],
+        "newlines-between": "always",
+        "alphabetize": {
+          "order": "asc",
+          "caseInsensitive": true
+        }
+      }
+    ]
+  }
 }
