--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-hook-form": "^7.52.1",
     "react-markdown": "^9.0.1",
     "react-modal": "^3.16.1",
+    "react-spring": "^9.7.4",
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^4.0.0",
     "zod": "^3.23.8"
