--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sentry/nextjs": "^8.13.0",
     "@storybook/test": "^8.1.11",
     "@tailwindcss/forms": "^0.5.7",
+    "@tanstack/react-query": "^5.51.24",
     "@types/react-modal": "^3.16.3",
     "@types/react-syntax-highlighter": "^15.5.13",
     "axios": "^1.7.2",
@@ -26,6 +27,7 @@
     "dotenv": "^16.4.5",
     "iron-session": "^8.0.2",
     "jotai": "^2.9.0",
+    "lodash": "^4.17.21",
     "next": "14.2.4",
     "prisma": "^5.16.1",
     "react": "^18",
