--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tanstack/react-query": "^5.51.24",
     "@types/react-modal": "^3.16.3",
+    "@types/react-slider": "^1.3.6",
     "@types/react-syntax-highlighter": "^15.5.13",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
+    "install": "^0.13.0",
     "iron-session": "^8.0.2",
     "jotai": "^2.9.0",
     "lodash": "^4.17.21",
     "next": "14.2.4",
+    "npm": "^10.8.3",
     "prisma": "^5.16.1",
     "react": "^18",
     "react-dom": "^18",
@@ -36,6 +39,7 @@
     "react-markdown": "^9.0.1",
     "react-modal": "^3.16.1",
     "react-slick": "^0.30.2",
+    "react-slider": "^2.0.6",
     "react-spring": "^9.7.4",
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^4.0.0",
