--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-hook-form": "^7.52.1",
     "react-markdown": "^9.0.1",
     "react-modal": "^3.16.1",
+    "react-paginate": "^8.2.0",
     "react-slick": "^0.30.2",
     "react-slider": "^2.0.6",
     "react-spring": "^9.7.4",
