--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^4.0.0",
     "slick-carousel": "^1.8.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
