--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "iron-session": "^8.0.2",
     "jotai": "^2.9.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.446.0",
     "next": "14.2.4",
     "npm": "^10.8.3",
     "prisma": "^5.16.1",
