--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.16.1",
+    "@react-spring/web": "^9.7.5",
     "@sentry/nextjs": "^8.13.0",
     "@storybook/test": "^8.1.11",
     "@tailwindcss/forms": "^0.5.7",
@@ -28,7 +29,9 @@
     "iron-session": "^8.0.2",
     "jotai": "^2.9.0",
     "lodash": "^4.17.21",
-    "next": "14.2.4",
+    "lucide-react": "^0.446.0",
+    "next": "^14.2.15",
+    "npm": "^10.8.3",
     "prisma": "^5.16.1",
     "react": "^18",
     "react-dom": "^18",
@@ -36,7 +39,7 @@
     "react-markdown": "^9.0.1",
     "react-modal": "^3.16.1",
     "react-slick": "^0.30.2",
-    "react-spring": "^9.7.4",
+    "react-slider": "^2.0.6",
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^4.0.0",
     "slick-carousel": "^1.8.1",
@@ -68,7 +71,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-tailwindcss": "^3.17.4",
-    "msw": "^2.3.1",
+    "msw": "^1.3.4",
     "postcss": "^8",
     "remark-gfm": "^4.0.0",
     "storybook": "^8.1.11",
