--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bcrypt": "^5.1.1",
     "cookies-next": "^4.2.1",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.11.11",
     "install": "^0.13.0",
     "iron-session": "^8.0.2",
     "jotai": "^2.9.0",
@@ -41,6 +42,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
