--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-spring/web": "^9.7.5",
     "@sentry/nextjs": "^8.13.0",
     "@storybook/test": "^8.1.11",
+    "@svgr/webpack": "^8.1.0",
     "@tailwindcss/forms": "^0.5.7",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-query-devtools": "^5.56.2",
