--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@storybook/react": "^8.1.11",
     "@types/bcrypt": "^5.0.2",
     "@types/js-cookie": "^3.0.6",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
