--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "iron-session": "^8.0.2",
     "jotai": "^2.9.0",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.446.0",
     "next": "^14.2.15",
