--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "npm": "^10.8.3",
     "prisma": "^5.16.1",
     "react": "^18",
+    "react-cookie": "^7.2.2",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
