--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "@hookform/resolvers": "^3.9.0",
     "@mui/material": "^6.1.8",
     "@prisma/client": "^5.16.1",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-navigation-menu": "^1.2.5",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
     "@react-spring/web": "^9.7.5",
     "@sentry/nextjs": "^8.13.0",
     "@storybook/test": "^8.1.11",
@@ -31,6 +36,8 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cookies-next": "^4.2.1",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.11.11",
@@ -58,7 +65,9 @@
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^4.0.0",
     "slick-carousel": "^1.8.1",
+    "tailwind-merge": "^3.0.1",
     "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
